Fix alignment issue in become-a-partner.css and update links in become-a-partner.html

--- a/become-a-partner.css
+++ b/become-a-partner.css
@@ -29,7 +29,7 @@ header > div:first-child a.btn {
   font-weight: 700;
   display: flex;
   justify-content: center;
-  align-self: center;
+  align-items: center;
 }
 
 header > div:first-child button.btn:hover {
